Cliente, TipoCliente, telefones e enderecos